--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,43 +1,23 @@
-name: Nightly Build
+name: Release
 
 on:
-  schedule:
-    # cronjob that triggers every day at 2PM UTC
-    - cron: "0 14 * * *"
-  workflow_dispatch:
+  push:
+    branches:
+      - enhanced
 
 concurrency:
-  group: nightly
+  group: release
   cancel-in-progress: true
 
 jobs:
-  check_recent_commit:
-    runs-on: ubuntu-latest
-    name: Check Recent Commit
-    outputs:
-      should_run: ${{ steps.should_run.outputs.should_run }}
-    steps:
-      - uses: actions/checkout@v3
-
-      - id: should_run
-        name: Check if latest commit date is within the previous 24 hours
-        run: |
-          if [ -z "$(git rev-list --since="24 hours ago" --all)" ]; then
-            echo "should_run=false" >> $GITHUB_OUTPUT
-          else
-            echo "should_run=true" >> $GITHUB_OUTPUT
-          fi
-
-  build_nightly:
-    runs-on: [self-hosted, Windows]
-    name: Build Nightly
-    needs: check_recent_commit
-    if: needs.check_recent_commit.outputs.should_run == 'true'
+  build:
+    runs-on: windows-latest
+    name: Generate yimmenu build
     outputs:
       full_sha: ${{ steps.var.outputs.full_sha }}
       short_sha: ${{ steps.var.outputs.short_sha }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -55,6 +35,9 @@ jobs:
       - name: Build 64bit release DLL
         run: cmake --build ./build --config RelWithDebInfo --target YimMenuV2 --
 
+      - name: Check if DLL got built
+        run: if (-Not (Test-Path -path "build/YimMenuV2.dll")) {throw 1}
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -69,24 +52,20 @@ jobs:
           echo "full_sha=$(git rev-parse HEAD)" >> $env:GITHUB_OUTPUT
           echo "short_sha=$(git rev-parse --short HEAD)" >> $env:GITHUB_OUTPUT
 
-  recreate_release:
+  create_release:
     runs-on: ubuntu-latest
-    name: Recreate Release
-    needs: build_nightly
-    if: needs.check_recent_commit.outputs.should_run == 'true'
+    name: Create Release
+    needs: [build]
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Delete Existing Release
-        id: delete_release
+      - uses: actions/checkout@v4
+      - name: Delete Previous GitHub Release
         uses: actions/github-script@v6
         with:
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
-            const tag = "nightly";
+            const tag = "release-latest";
 
-            // List all releases and find the release by tag
             const releases = await github.rest.repos.listReleases({
               owner: owner,
               repo: repo,
@@ -94,7 +73,6 @@ jobs:
 
             const release = releases.data.find(release => release.tag_name === tag);
 
-            // Check if the release exists and delete it
             if (release) {
               await github.rest.repos.deleteRelease({
                 owner: owner,
@@ -106,7 +84,7 @@ jobs:
               console.log("No existing release to delete");
             }
 
-            // Delete the tag
+            // Delete the tag but it is not mandatory (https://github.com/YimMenu/YimMenu/issues/2499)
             try {
               await github.rest.git.deleteRef({
                 owner: owner,
@@ -123,40 +101,30 @@ jobs:
         with:
           name: binary
 
-      - name: Echo build sha256
+      - name: Echo sha256 of build
         id: build_sha
         run: |
           sha256sum YimMenuV2.dll > sha256.checksum
           echo "build_sha=$(cat sha256.checksum)" >> $GITHUB_OUTPUT
           cat sha256.checksum
 
-      - name: Nightly Release
-        uses: softprops/action-gh-release@v1
+      - name: Github Release
+        uses: softprops/action-gh-release@v2
         with:
-          name: Nightly [${{ needs.build_nightly.outputs.short_sha }}]
-          tag_name: nightly
+          name: latest
+          tag_name: release-latest
           body: |
             **This release has been built by Github Actions**
             [Link to build](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
+            Full Commit Hash:
+            ```
+            ${{ needs.build.outputs.full_sha }}
+            ```
             Build SHA256:
             ```
             ${{ steps.build_sha.outputs.build_sha }}
             ```
-            To verify the build SHA256 during the action, click the build link, go-to "Create Release", open the Echo build sha256 step and read the sha256.
-
             You can download the build artifacts, generate a SHA256 checksum and compare it with the below binary.
-            Build artifacts ARE NOT automatically the same as release assets since release assets can be modified afterwards.
-
-            These are nightly builds of YimMenuV2, they are provided for testing purposes only:
-            - Test if your build environment produces a broken YimMenuV2.dll
-            - Test if source code is out of date and no longer compatible with the current version of Grand Theft Auto V: Enhanced
-
             If you wish to use this menu as-is you are on your own, no warranty is provided.
-
-            Full Commit Hash:
-            ```
-            ${{ needs.build_nightly.outputs.full_sha }}
-            ```
           files: |
             YimMenuV2.dll
