--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -9,7 +9,7 @@
             "cmakeCommandArgs": "",
             "buildCommandArgs": "",
             "ctestCommandArgs": "",
-            "inheritEnvironments": [ "msvc_x64_x64" ],
+            "inheritEnvironments": [ "msvc_x64_x64" ]
         },
         {
             "name": "x64-Release-Clang",
